# ground-truth

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: scrape.yml
data/: current.json  history.jsonl
scripts/: notify_matrix.py  test_matrix_notify.py
site/: index.html  style.css
src/openground_diff/: __init__.py  diff.py  main.py  notify.py  render.py  scrape.py
tests/: test_diff.py  test_event_detail.py  test_event_diff_and_render.py  test_notify.py  test_render.py  test_scrape.py  test_sidebar_and_merge.py
